# docker-fastapi

./: .dockerignore  .env.example  .env.sample  .gitignore  .http  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  db.py  docker_service.py  main.py  models.py  rabbitmq.py
tests/: conftest.py  test_api.py  test_integration_docker.py
